create icon move and phone

--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
       </header>
     </div>
 
+<div class="relative">
+  <div class="fixed top-2/3 right-16">
+    <img class="m-4" src="asset\组 60.png" alt="" width="30px">
+    <img class="m-4" src="asset\组 61.png" alt="" width="30px">
+  </div>
+</div>
+
     <main class="container w-4/5 mx-auto">
       <div class="flex flex-row">
         <div class="relative flex flex-row">
